# mcp-web-search-hacks

./: .env.example  CLAUDE.md  Cargo.toml  DOCUMENTATION.md  Dockerfile  INSTALL.md  README.md  RELEASE.md  docker-compose.yml
.github/workflows/: build.yml
crates/mcp-web-search-core/: Cargo.toml
crates/mcp-web-search-core/src/: browser.rs  error.rs  lib.rs  server.rs
crates/mcp-web-search-server/: Cargo.toml
crates/mcp-web-search-server/src/: admin.rs  auth.rs  main.rs
crates/mcp-web-search-server/static/: admin.html
crates/mcp-web-search-stdio/: Cargo.toml
crates/mcp-web-search-stdio/src/: main.rs
deploy/: traefik.yml
src/: browser.rs  error.rs  extraction.rs  main.rs  server.rs
