[package]
name = "mcp-web-search-hacks"
version = "0.1.0"
edition = "2024"

[dependencies]
# MCP protocol
rmcp = { version = "0.1", features = ["server", "transport-io"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Browser automation
headless_chrome = { version = "1.0", features = ["fetch"] }

# Content extraction
html2text = "0.16"
scraper = "0.26"

# Encoding
base64 = "0.22"
urlencoding = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"
