[package]
name = "mcp-web-search-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.3", features = ["server", "macros", "schemars"] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
headless_chrome = { version = "1.0", features = ["fetch"] }
html2text = "0.16"
scraper = "0.26"
base64 = "0.22"
urlencoding = "2"
tracing = "0.1"
anyhow = "1"
thiserror = "2"
