[package]
name = "mcp-web-search-server"
version = "0.1.0"
edition = "2024"

[dependencies]
mcp-web-search-core = { path = "../mcp-web-search-core" }
rmcp = { version = "1.3", features = ["server", "macros", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
