[package]
name = "mcp-web-search-stdio"
version = "0.1.0"
edition = "2024"

[dependencies]
mcp-web-search-core = { path = "../mcp-web-search-core" }
rmcp = { version = "1.3", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
